--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
   <!-- Bootstrap Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet"/>
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="Style.css">
   <script src="script.js"></script>
 </head>
 <body>
-  <!-- NAVBAR -->
+
+<!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg bg-white sticky-top">
   <div class="container">
     <a class="navbar-brand fw-bold text-primary" href="#">
@@ -34,6 +35,7 @@
     </div>
   </div>
 </nav>
+
 <!-- HERO -->
 <header class="hero">
   <div class="container py-5">
@@ -56,5 +58,195 @@
     </div>
   </div>
 </header>
-</body>
+
+<!-- COLOR TOOLS / TEASER -->
+<section id="colors" class="py-5">
+  <div class="container">
+    <div class="row g-4 align-items-center">
+      <div class="col-lg-6">
+        <img class="w-100 rounded-4 shadow" src="img/clrvisualiser.avif" alt="Color chips"/>
+      </div>
+      <div class="col-lg-6">
+        <h2 class="section-heading mb-3">Find Your Perfect Shade</h2>
+        <p class="mb-4">Browse curated palettes, test combinations, and preview colors on sample rooms before you paint.</p>
+        <div class="row g-3">
+          <div class="col-6">
+            <div class="p-3 border rounded-4 h-100">
+              <h6 class="mb-1"><i class="bi bi-magic me-1 text-warning"></i>Room Preview</h6>
+              <small>Swap wall colors on staged interiors.</small>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="p-3 border rounded-4 h-100">
+              <h6 class="mb-1"><i class="bi bi-collection me-1 text-warning"></i>Palettes</h6>
+              <small>Designer-picked color stories.</small>
+            </div>
+          </div>
+        </div>
+        <a href="#tools" class="btn btn-primary mt-4"><i class="bi bi-eye me-1"></i>Open Color Tools</a>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- PRODUCTS -->
+<section id="products" class="py-5 bg-light">
+  <div class="container">
+    <div class="text-center mb-4">
+      <h2 class="section-heading">Explore Our Products</h2>
+      <p class="text-muted">High-performance paints and coatings for every surface.</p>
+    </div>
+    <div class="row g-4">
+      <div class="col-12 col-sm-6 col-lg-3">
+        <div class="card h-100">
+          <img src="IMG/interiorPaints.avif" class="card-img-top" alt="Interior Paints">
+          <div class="card-body">
+            <h5 class="card-title">Interior Paints</h5>
+            <p class="card-text">Low-odor, washable finishes for living rooms, bedrooms, and kitchens.</p>
+            <a href="#" class="btn btn-outline-primary w-100">Learn More</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-lg-3">
+        <div class="card h-100">
+          <img src="IMG/ExteriorPaints.avif" class="card-img-top" alt="Exterior Paints">
+          <div class="card-body">
+            <h5 class="card-title">Exterior Paints</h5>
+            <p class="card-text">Weather-resistant protection with long-lasting color retention.</p>
+            <a href="#" class="btn btn-outline-primary w-100">Learn More</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-lg-3">
+        <div class="card h-100">
+          <img src="img/wood_coating.webp" class="card-img-top" alt="Wood Coatings">
+          <div class="card-body">
+            <h5 class="card-title">Wood Coatings</h5>
+            <p class="card-text">Enhance grain and guard against moisture & UV.</p>
+            <a href="#" class="btn btn-outline-primary w-100">Learn More</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-lg-3">
+        <div class="card h-100">
+          <img src="img/metalPaint.png" class="card-img-top" alt="Metal Paints">
+          <div class="card-body">
+            <h5 class="card-title">Metal Paints</h5>
+            <p class="card-text">Anti-corrosive primers and durable topcoats for metal surfaces.</p>
+            <a href="#" class="btn btn-outline-primary w-100">Learn More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- WHY CHOOSE US -->
+<section id="inspire" class="py-5">
+  <div class="container">
+    <div class="text-center mb-4">
+      <h2 class="section-heading">Why choose us?</h2>
+      <p class="text-muted">Real rooms, real colors — see what’s trending now.</p>
+    </div>
+    <div class="row g-3 gallery">
+      <div class="col-6 col-md-4"><img src="https://images.unsplash.com/photo-1600585154526-990dced4db0d?q=80&w=1200&auto=format&fit=crop" class="w-100" alt="Inspiration 1">Lorem, ipsum dolor sit amet consectetur adipisicing.</div>
+      <div class="col-6 col-md-4"><img src="https://images.unsplash.com/photo-1524758631624-e2822e304c36?q=80&w=1200&auto=format&fit=crop" class="w-100" alt="Inspiration 2">Lorem ipsum dolor sit amet consectetur.</div>
+      <div class="col-6 col-md-4"><img src="IMG/choose4.avif" class="w-100" alt="Inspiration 3">Lorem ipsum dolor sit amet.</div>
+      <div class="col-6 col-md-4"><img src="https://images.unsplash.com/photo-1505693416388-ac5ce068fe85?q=80&w=1200&auto=format&fit=crop" class="w-100" alt="Inspiration 4">Lorem ipsum dolor sit amet consectetur.</div>
+      <div class="col-6 col-md-4"><img src="https://images.unsplash.com/photo-1501183638710-841dd1904471?q=80&w=1200&auto=format&fit=crop" class="w-100" alt="Inspiration 5">Lorem ipsum dolor sit amet consectetur.</div>
+      <div class="col-6 col-md-4"><img src="https://images.unsplash.com/photo-1484154218962-a197022b5858?q=80&w=1200&auto=format&fit=crop" class="w-100" alt="Inspiration 6">Lorem ipsum dolor sit amet consectetur.</div>
+    </div>
+  </div>
+</section>
+
+
+
+<!-- STORE LOCATOR CTA -->
+<section id="locator" class="py-5">
+  <div class="container">
+    <div class="locator p-4 p-md-5 d-lg-flex justify-content-between align-items-center">
+      <div class="mb-3 mb-lg-0">
+        <h3 class="mb-1">Find a Store Near You</h3>
+        <p class="mb-0">Get expert advice, color chips, and products today.</p>
+      </div>
+      <form id="locateForm" class="d-flex gap-2 flex-wrap" novalidate>
+        <input class="form-control" id="pincode" placeholder="Enter PIN / ZIP" required />
+        <button class="btn btn-accent" type="submit"><i class="bi bi-search me-1"></i>Search</button>
+        <div class="invalid-feedback d-block" id="pinError" style="display:none;">Please enter a valid PIN/ZIP (min. 4 digits).</div>
+      </form>
+    </div>
+  </div>
+</section>
+
+<!-- CONTACT -->
+<section id="contact" class="py-5 bg-light">
+  <div class="container">
+    <div class="text-center mb-4">
+      <h2 class="section-heading">Contact Us</h2>
+      <p class="text-muted">Questions, quotes, or color advice? We’re here to help.</p>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-lg-7">
+        <form id="contactForm" class="needs-validation" novalidate>
+          <div class="row g-3">
+            <div class="col-md-6">
+              <label class="form-label">Name</label>
+              <input type="text" class="form-control" id="name" required />
+              <div class="invalid-feedback">Please enter your name.</div>
+            </div>
+            <div class="col-md-6">
+              <label class="form-label">Email</label>
+              <input type="email" class="form-control" id="email" required />
+              <div class="invalid-feedback">Enter a valid email.</div>
+            </div>
+            <div class="col-12">
+              <label class="form-label">Message</label>
+              <textarea class="form-control" id="message" rows="4" required></textarea>
+              <div class="invalid-feedback">Please write a message.</div>
+            </div>
+            <div class="col-12">
+              <button class="btn btn-primary w-100" type="submit">Send Message</button>
+            </div>
+          </div>
+        </form>
+        <div id="formSuccess" class="alert alert-success mt-3 d-none" role="alert">
+          Thanks! We’ll get back to you shortly.
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- FOOTER -->
+<footer class="pt-5 pb-4">
+  <div class="container">
+    <div class="row gy-4 align-items-center">
+      <div class="col-md-6">
+        <div class="d-flex align-items-center gap-2">
+          <i class="bi bi-palette2 fs-3 text-warning"></i>
+          <div>
+            <h5 class="mb-0 text-white">ColorsCrest Paints</h5>
+            <small>Color made simple.</small>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 text-md-end">
+        <a href="#" class="me-3">Privacy</a>
+        <a href="#" class="me-3">Terms</a>
+        <a href="#"><i class="bi bi-facebook me-2"></i></a>
+        <a href="#"><i class="bi bi-instagram me-2"></i></a>
+        <a href="#"><i class="bi bi-youtube"></i></a>
+      </div>
+    </div>
+    <hr class="border-secondary mt-4"/>
+    <p class="mb-0 small text-center">© 2025 ColorsCrest Paints .  praptimangadewebz.com All rights reserved.</p>
+  </div>
+</footer>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- Basic Interactivity & Validation -->
+
+</body>-
 </html>
