--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <div class="row g-4">
       <div class="col-12 col-sm-6 col-lg-3">
         <div class="card h-100">
-          <img src="IMG/interiorPaints.avif" class="card-img-top" alt="Interior Paints">
+          <img src="img/interiorpaints.png" class="card-img-top" alt="Interior Paints">
           <div class="card-body">
             <h5 class="card-title">Interior Paints</h5>
             <p class="card-text">Low-odor, washable finishes for living rooms, bedrooms, and kitchens.</p>
@@ -109,7 +109,7 @@
       </div>
       <div class="col-12 col-sm-6 col-lg-3">
         <div class="card h-100">
-          <img src="IMG/ExteriorPaints.avif" class="card-img-top" alt="Exterior Paints">
+          <img src="img/exteriorpaints.png" class="card-img-top" alt="Exterior Paints">
           <div class="card-body">
             <h5 class="card-title">Exterior Paints</h5>
             <p class="card-text">Weather-resistant protection with long-lasting color retention.</p>
@@ -151,7 +151,7 @@
     <div class="row g-3 gallery">
       <div class="col-6 col-md-4"><img src="https://images.unsplash.com/photo-1600585154526-990dced4db0d?q=80&w=1200&auto=format&fit=crop" class="w-100" alt="Inspiration 1">Lorem, ipsum dolor sit amet consectetur adipisicing.</div>
       <div class="col-6 col-md-4"><img src="https://images.unsplash.com/photo-1524758631624-e2822e304c36?q=80&w=1200&auto=format&fit=crop" class="w-100" alt="Inspiration 2">Lorem ipsum dolor sit amet consectetur.</div>
-      <div class="col-6 col-md-4"><img src="IMG/choose4.avif" class="w-100" alt="Inspiration 3">Lorem ipsum dolor sit amet.</div>
+      <div class="col-6 col-md-4"><img src="img/choose3.png" class="w-100" alt="Inspiration 3">Lorem ipsum dolor sit amet.</div>
       <div class="col-6 col-md-4"><img src="https://images.unsplash.com/photo-1505693416388-ac5ce068fe85?q=80&w=1200&auto=format&fit=crop" class="w-100" alt="Inspiration 4">Lorem ipsum dolor sit amet consectetur.</div>
       <div class="col-6 col-md-4"><img src="https://images.unsplash.com/photo-1501183638710-841dd1904471?q=80&w=1200&auto=format&fit=crop" class="w-100" alt="Inspiration 5">Lorem ipsum dolor sit amet consectetur.</div>
       <div class="col-6 col-md-4"><img src="https://images.unsplash.com/photo-1484154218962-a197022b5858?q=80&w=1200&auto=format&fit=crop" class="w-100" alt="Inspiration 6">Lorem ipsum dolor sit amet consectetur.</div>
